# ACESMetadataFormatAnalyst_CPP

./: ACESMetadataFormatAnalyst_CPP.pro  AMFanalyst.ui  CMakeLists.txt  README.md  amfanalyst.cpp  amfanalyst.h  amfanalyst.ui  amfutil.cpp  amfutil.h  analyst.cpp  analyst.h  analyst.ui  callout.cpp  callout.h  ctlrendertool.cpp  ctlrendertool.h  main.cpp  mainwindow.h  ociotest.cpp  ociotest.h  ocioutil.cpp  ocioutil.h  parseamf.cpp  parseamf.h  scatter.cpp  scatter.h  ui_amfanalyst.h  util.cpp  view.cpp  view.h
GraduationTestClassify/AMF/: EngeneHsuanDemoFile.amf  LogCEI800-P3D65-D60sim48nits.amf  LogCEI800-Rec.709100nitsdim.amf
amf-util/: CPPInput.py  Testfunction1.py  amf-util.py  pythoncmd.py  renderPro.py
amf-util/src/: pythoncmd.py  render.py  renderPro.py
amf-util/src/amf/: amf.py
amf-util/src/ctl/: ctl.py
